Rearrange init sequence
fixes changing web dir